# scwape

./: Cargo.toml  README.md  build.rs  scwape.bash
completions/: scwape.fish
src/: cli.rs  main.rs
