[package]
name = "scrap"
version = "0.1.0"
authors = ["Francis Chua <hwymonkey@gmail.com>"]
license = "MIT"
description = "A tool to scrape the web via CSS selectors"
readme = "README.md"
homepage = "https://github.com/tweoss/scraper"
repository = "https://github.com/tweoss/scraper"
keywords = ["cli", "search", "scrape"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
select = "0.5.0"
scraper = "0.12.0"
tokio = { version = "1.9.0", features = ["full"]}
clap = "3.0.0-beta.2"
colored = "2.0.0"
snailquote = "0.3.0"
